# arena4-capstone

./: .gitignore  README.md  add_ssh_host.py  pyproject.toml
blog_post/: blogpost.md
datasets/: mcq_hard.json  mcq_simple.json  tf_statements.json
presentation/: slides.md
scripts/: set_up_new_machine.sh
src/arena4_capstone/: analysis.ipynb  analysis.py  mcq_plots.py  mcq_research.py  models.py  tokens.py  util.py
src/arena4_capstone/datasets/: __init__.py  mcq.py  tf_statements.py  utils.py
src/arena4_capstone/old/: analysis.py  mcq_plots.py
src/capstone/: accuracy_alex.py  dataset.py  mcq_plots.py  mcq_research.py  presentation.ipynb  util.py
