[project]
name = "arena4-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nnsight>=0.3.3",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "torch<2.3.0",
    "tqdm>=4.66.5",
    "transformers>=4.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
